<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_news"
            android:icon="@drawable/ic_news"
            android:title="@string/nav_menu_news" />
        <item
            android:id="@+id/nav_user"
            android:icon="@drawable/ic_user"
            android:title="@string/nave_menu_user" />
        <item
            android:id="@+id/nav_schedule"
            android:icon="@drawable/ic_schedule"
            android:title="@string/nav_menu_schedule" />
        <item
            android:id="@+id/nav_school"
            android:icon="@drawable/ic_school"
            android:title="@string/nav_menu_school" />
        <item
            android:id="@+id/nav_kardex"
            android:icon="@drawable/ic_kardex"
            android:title="@string/nav_menu_kardex" />
    </group>

    <item android:title="">
        <menu>
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/action_settings" />
            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/nav_menu_logout" />
        </menu>
    </item>

</menu>
