<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/details">

    <fragment
        android:id="@+id/noticesFragment"
        android:name="mx.edu.upqroo.kristenandroid.ui.fragments.NoticesFragment"
        android:label="@string/nav_menu_notice"
        tools:layout="@layout/fragment_notices" />
    <fragment
        android:id="@+id/emptyFragment"
        android:name="mx.edu.upqroo.kristenandroid.ui.fragments.EmptyFragment"
        android:label="fragment_empty"
        tools:layout="@layout/fragment_empty" />
    <fragment
        android:id="@+id/userFragment"
        android:name="mx.edu.upqroo.kristenandroid.ui.fragments.UserFragment"
        android:label="@string/nave_menu_user"
        tools:layout="@layout/fragment_user" />
    <fragment
        android:id="@+id/kardexFragment"
        android:name="mx.edu.upqroo.kristenandroid.ui.fragments.KardexFragment"
        android:label="@string/nav_menu_kardex"
        tools:layout="@layout/fragment_kardex" />
    <fragment
        android:id="@+id/contactFragment"
        android:name="mx.edu.upqroo.kristenandroid.ui.fragments.ContactFragment"
        android:label="@string/nav_contact"
        tools:layout="@layout/fragment_contact" />
</navigation>